# Cloudy

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  com.fiberelements.Clouddrive.yml  com.fiberelements.Cloudy.yml  io.github.sha5b.Clouddrive.yml  io.github.sha5b.Cloudy.yml  meson.build  requirements.txt
.github/workflows/: release.yml
data/: cloudy.gschema.override.in  com.fiberelements.Clouddrive.gschema.xml  com.fiberelements.Cloudy.desktop.in  com.fiberelements.Cloudy.gresource.xml  com.fiberelements.Cloudy.gschema.xml  com.fiberelements.Cloudy.metainfo.xml.in  io.github.sha5b.Cloudy.desktop.in  io.github.sha5b.Cloudy.gresource.xml  io.github.sha5b.Cloudy.gschema.xml  io.github.sha5b.Cloudy.metainfo.xml.in  io.github.sha5b.Cloudy.service.in  meson.build  style.css
data/ui/: preferences.blp  window.blp
docs/: ARCHITECTURE.md  AUDIT_2026-06-29.md  AUTH.md  BUILDING.md  HANDOFF.md  MODULES.md  RESEARCH.md  ROADMAP.md  SECRETS.md  index.html  privacy.html  terms.html
docs/assets/: site.css
nautilus-extension/: README.md  clouddrive_nautilus.py  cloudy_nautilus.py
packaging/: cloudy.spec
po/: POTFILES.in  meson.build
scripts/: bootstrap-fedora.sh  flatpak-local-manifest.py  uninstall-cloudy.sh
src/: cloudy.in  meson.build
src/clouddrive/: account_dialog.py  application.py  window.py
src/clouddrive/core/: account_registry.py  dbus_service.py  provisioner.py
src/clouddrive/core/auth/: google_oauth.py
src/clouddrive/modules/gmail/: google_client.py
src/clouddrive/modules/microsoft365/: graph.py  module.py  mounts.py
src/clouddrive/widgets/: calendar_view.py  clients.py  files_view.py  mail_view.py  message_dialog.py
src/cloudy/: __init__.py  account_dialog.py  application.py  main.py  preferences.py  window.py
src/cloudy/core/: __init__.py  account_registry.py  cache.py  credentials.py  dbus_service.py  eds_publish.py  ics.py  interfaces.py  notifications.py  plugin_engine.py  provisioner.py  secrets.py  sync.py
src/cloudy/core/auth/: __init__.py  google_oauth.py  msal_graph.py
src/cloudy/modules/: __init__.py
src/cloudy/modules/gmail/: __init__.py  google_client.py
src/cloudy/modules/microsoft365/: __init__.py  abraunegg.py  files.py  graph.py  graph_calendar.py  graph_chat.py  graph_files.py  graph_http.py  graph_mail.py  graph_markup.py  graph_teams.py  module.py  mounts.py
src/cloudy/widgets/: __init__.py  activity_view.py  attachments.py  calendar_view.py  chat_avatar.py  chat_compose.py  chat_view.py  clients.py  command_palette.py  compose_view.py  dashboard_view.py  editor_window.py  event_compose.py  event_time.py  event_view.py  event_window.py  file_browser.py  file_browser_utils.py  files_view.py  format.py  graph_helper.py  imaging.py  mail_view.py  media_window.py  message_dialog.py  message_view.py  message_window.py  metrics.py  month_grid.py  rich_editor.py  source_nav.py  teams_view.py
tests/: meson.build
tests/unit/: fakes.py  gi_setup.py  test_account.py  test_cache.py  test_clients.py  test_event_time.py  test_files.py  test_google_client.py  test_graph.py  test_ics.py  test_message_view.py  test_mounts_and_misc.py  test_notifications.py  test_provisioner.py  test_source_nav.py
